--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .custom__navbar li {
+    @apply mr-8;
+    @apply cursor-pointer;
+  }
+}
