--- a/src/style/index.css
+++ b/src/style/index.css
@@ -10,16 +10,15 @@
     @apply cursor-pointer;
   }
   .letter__special {
-    font-size: 185px;
+    font-size: 235px;
     font-family: "Staatliches", cursive;
     color: rgb(153, 153, 153);
     cursor: default;
     z-index: 30;
+    block-size: 220px;
+    margin-right: 5px;
   }
-  .letter__special:hover {
-    @apply animate-rubber;
-    color: #525151;
-  }
+
   .height_1 {
     height: 35rem;
   }
