--- a/src/style/index.css
+++ b/src/style/index.css
@@ -52,6 +52,17 @@
   .handwritting-font {
     font-family: "Shadows Into Light", cursive;
   }
+  .frostedcont {
+    background: rgba(195, 195, 195, 0.2);
+    box-shadow: 0 1px 2px 0 black;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 10px;
+  }
+  .about-animate {
+    @apply animate-rubber;
+    color: #5e5e5e;
+  }
 }
 
 @layer base {
