--- a/src/style/index.css
+++ b/src/style/index.css
@@ -102,6 +102,70 @@
     height: 100%;
     opacity: 0.5;
   }
+  .baby__parah {
+    background: rgba(224, 224, 224, 0.65);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+  }
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: max-content;
+    padding: 20px;
+    grid-gap: 50px;
+  }
+  .card {
+    transition: all 0.5s ease;
+    background-color: #1c1b29;
+    border-radius: 20px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.18);
+  }
+  .card:hover {
+    transform: scale(1.15);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6);
+  }
+  .img_container {
+    position: relative;
+    height: auto;
+  }
+  .img_container img {
+    max-width: 100%;
+    max-height: 100%;
+    margin: auto;
+    display: block;
+    border-radius: 20px 20px 0 0;
+  }
+  .img_container::after {
+    content: "";
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 20px 20px 0 0;
+    opacity: 0.7;
+  }
+  .card > .img_container:after {
+    background-image: linear-gradient(135deg, #0100ec, #fb36f4);
+  }
+  .details {
+    padding: 20px 10px;
+  }
+  .details > h3 {
+    color: #ffffff;
+    font-weight: 600;
+    font-size: 18px;
+    margin: 10px 0 15px 0;
+  }
+  .details > p {
+    color: #a0a0a0;
+    font-size: 15px;
+    line-height: 30px;
+    font-weight: 400;
+  }
 }
 
 @layer base {
