--- a/src/style/index.css
+++ b/src/style/index.css
@@ -120,13 +120,15 @@
   .card {
     transition: all 0.5s ease;
     background-color: #1c1b29;
-    border-radius: 20px;
+    border-radius: 5px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.18);
   }
+
   .card:hover {
     transform: scale(1.07);
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6);
   }
+
   .img_container {
     position: relative;
     height: auto;
@@ -136,7 +138,7 @@
     max-height: 100%;
     margin: auto;
     display: block;
-    border-radius: 20px 20px 0 0;
+    border-radius: 5px 5px 0 0;
   }
   .img_container::after {
     content: "";
@@ -145,12 +147,17 @@
     position: absolute;
     top: 0;
     left: 0;
-    border-radius: 20px 20px 0 0;
-    opacity: 0.7;
+    border-radius: 5px 5px 0 0;
+    opacity: 0.5;
   }
+
   .card > .img_container:after {
     background-image: linear-gradient(135deg, #0100ec, #fb36f4);
   }
+  .card:hover > .img_container:after {
+    background-image: none;
+  }
+
   .details {
     padding: 20px 10px;
   }
