--- a/src/style/index.css
+++ b/src/style/index.css
@@ -113,11 +113,13 @@
   .cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-auto-rows: max-content;
+    height: auto;
+    align-items: flex-start;
     padding: 20px;
     grid-gap: 40px;
   }
   .card {
+    height: auto;
     transition: all 0.5s ease;
     background-color: #1c1b29;
     border-radius: 5px;
@@ -165,7 +167,6 @@
     color: #ffffff;
     font-weight: 600;
     font-size: 18px;
-    margin: 10px 0 15px 0;
   }
   .details > p {
     color: #a0a0a0;
