--- a/src/style/index.css
+++ b/src/style/index.css
@@ -84,32 +84,13 @@
     color: #bfbfbf;
   }
   .overlay__normal {
-    position: relative;
-    display: flex;
+    /* position: relative; */
     mix-blend-mode: difference;
   }
   .overlay__normal > * {
     z-index: 100;
   }
 
-  .overlay__normal:after {
-    content: "";
-    position: absolute;
-    margin: auto;
-    left: 0;
-    right: 0;
-    width: 50%;
-    height: 100%;
-    opacity: 0.5;
-  }
-  .baby__parah {
-    background: rgba(224, 224, 224, 0.65);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
-  }
   .cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -177,4 +158,7 @@
 }
 
 @layer base {
+  html {
+    scroll-behavior: smooth;
+  }
 }
