many changes made

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -64,15 +64,8 @@
     color: #5e5e5e;
   }
   .backgroundEffect {
-    backgroundsize: "cover";
-    background-position: 25% 75%;
+    background-size: auto 100%;
     background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    -moz-background-position: 25% 75%;
-    -webkit-background-position: 25% 75%;
-    -o-background-position: 25% 75%;
   }
   .projectht {
     height: 300vh;
