--- a/src/style/index.css
+++ b/src/style/index.css
@@ -83,7 +83,45 @@
   .overlay__normal > * {
     z-index: 100;
   }
-
+  .border_rotate {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    box-shadow: 0 20px 35px rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
+    overflow: hidden;
+  }
+  .border_rotate::before {
+    content: "";
+    background-image: conic-gradient(#6ee7b7 20deg, transparent 120deg);
+    height: 150%;
+    width: 150%;
+    position: absolute;
+    left: -25%;
+    top: -25%;
+    @apply animate-rotater;
+  }
+  .border_rotate::after {
+    content: "ENTER";
+    position: absolute;
+    height: 90%;
+    width: 90%;
+    background-color: #1c1b29;
+    border-radius: 5px;
+    top: 5%;
+    left: 5%;
+    color: #6ee7b7;
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    font-size: 20px;
+    letter-spacing: 6px;
+  }
   .cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
